clusters/corpus/apps/crypto/btc-rpc-explorer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btc-rpc-explorer
  namespace: crypto
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${cloudflared_tunnel_uuid}.cfargotunnel.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "btc.${public_services_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: btc-rpc-explorer
                port:
                  number: 80
